Revert "Изменения в package.json"
This reverts commit 4394f82591671fbd43dd3df8f00643d6d36ea266.

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   },
   "homepage": "https://github.com/htmlacademy-adaptive/64785-sedona",
   "devDependencies": {
-    "editorconfig-tools": "0.1.1",
-    "gulp-sass": "^2.2.0"
+    "editorconfig-tools": "0.1.1"
   },
   "scripts": {
     "test": "editorconfig-tools check *"
