--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-mqpacker": "^4.0.1",
     "editorconfig-tools": "0.1.1",
     "gulp": "3.9.1",
+    "gulp-contrib-copy": "^0.1.2",
     "gulp-csso": "^1.1.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-plumber": "1.1.0",
